--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard | Odin Project</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./src/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link type="image/png" sizes="16x16" rel="icon" href="./icons8-kawaii-french-fries-16.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="./images/icons8-kawaii-french-fries-16.png">
 </head>
 <body>
     <div class="container">
@@ -55,10 +55,10 @@
                 </form>
             </div>
             <div class="alert"><button class="bell"><i class="fa-solid fa-bell"></i></button></div>
-            <div class="profile"><img src="./matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="32px" height="32px"><span>Matcha Tea</span></div>
+            <div class="profile"><img src="./images/matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="32px" height="32px"><span>Matcha Tea</span></div>
 
             <div class="welcome">
-                <img src="./matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="46px" height="46px">
+                <img src="./images/matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="46px" height="46px">
                 <div><span>Hi there,</span><br /><h3>Matcha Tea (@matcha)</h3></div>
             </div>
             <div class="buttons">
@@ -198,19 +198,19 @@
             <div class="trend-title"><h3>Trending</h3></div>
             <div class="trend-content">
                 <div class="trend1">
-                    <img src="./matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="32px" height="32px">
+                    <img src="./images.matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="32px" height="32px">
                     <span><b>@matcha</b><br />Project Title</span>
                 </div>
                 <div class="trend2">
-                    <img src="./nom-yen.png" alt="nom-yen-profile-pic" class="nom-yen-profile-pic" width="32px" height="32px">
+                    <img src="./images/nom-yen.png" alt="nom-yen-profile-pic" class="nom-yen-profile-pic" width="32px" height="32px">
                     <span><b>@nom-yen</b><br />Project Title</span>
                 </div>
                 <div class="trend3">
-                    <img src="./dorayaki.png" alt="dorayaki-profile-pic" class="dorayaki-profile-pic" width="32px" height="32px">
+                    <img src="./images/dorayaki.png" alt="dorayaki-profile-pic" class="dorayaki-profile-pic" width="32px" height="32px">
                     <span><b>@dorayaki</b><br />Project Title</span>
                 </div>
                 <div class="trend4">
-                    <img src="./ramen.png" alt="ramen-profile-pic" class="ramen-profile-pic" width="32px" height="32px">
+                    <img src="./images/ramen.png" alt="ramen-profile-pic" class="ramen-profile-pic" width="32px" height="32px">
                     <span><b>@ramen</b><br />Project Title</span>
                 </div>
             </div>
