Update index.html fix typo in path to img

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="trend-title"><h3>Trending</h3></div>
             <div class="trend-content">
                 <div class="trend1">
-                    <img src="./images.matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="32px" height="32px">
+                    <img src="./images/matcha.png" alt="macha-profile-pic" class="macha-profile-pic" width="32px" height="32px">
                     <span><b>@matcha</b><br />Project Title</span>
                 </div>
                 <div class="trend2">
